Added upper frechet bounds

--- a/gene_upscaling.ipynb
+++ b/gene_upscaling.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,9 +506,16 @@
     "    if frechet_bounds:\n",
     "        constraints += [\n",
     "            # frechet lower bounds (individuals may be redundant)\n",
-    "            z_on >= k_on * pdl + k_off * pdl - kv - k_off * pdu,\n",
-    "            z_off >= k_on * pdl + k_off * pdl - kv - k_on * pdu,\n",
-    "            z_on + z_off >= k_on * pdl + k_off * pdl - kv\n",
+    "            # z_on >= k_on * pdl + k_off * pdl - kv - k_off * pdu,\n",
+    "            # z_off >= k_on * pdl + k_off * pdl - kv - k_on * pdu,\n",
+    "            # z_on + z_off >= k_on * pdl + k_off * pdl - kv\n",
+    "            # upper bounds\n",
+    "            B @ z_on[0::2] <= k_on * pu, B @ z_on[1::2] <= k_on * pu,\n",
+    "            B @ z_off[0::2] <= k_off * pu, B @ z_off[1::2] <= k_off * pu,\n",
+    "            B @ z_tx[0::2] <= k_tx * pu, B @ z_tx[1::2] <= k_tx * pu,\n",
+    "            B @ z_deg[0::2] <= k_deg * pu, B @ z_deg[1::2] <= k_deg * pu\n",
+    "            # lower bounds\n",
+    "            # B @ z_on[0::2] + k_on * t_bound\n",
     "        ]\n",
     "\n",
     "    if frechet_bounds_further:\n",
@@ -565,6 +572,26 @@
     "                print(f\"\\n{var} = {solutions[var][0]}\")\n",
     "\n",
     "    return solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3, 4][0::2]"
    ]
   },
   {
@@ -632,38 +659,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# choice of truncation\n",
     "x_max = 8\n",
-    "x_max_0 = 8"
+    "x_max_0 = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "k_on = 0.9\n",
-      "\n",
-      "k_off = 0.1\n",
-      "\n",
-      "k_tx in (0.4522359189212933, inf) , status: optimal , unbounded\n",
-      "\n",
-      "k_deg = 1\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\willi\\Documents\\Year 4 Project Work\\Proj_venv\\lib\\site-packages\\cvxpy\\problems\\problem.py:1409: UserWarning: \n",
+      "    The problem is either infeasible or unbounded, but the solver\n",
+      "    cannot tell which. Disable any solver-specific presolve methods\n",
+      "    and re-solve to determine the precise problem status.\n",
+      "\n",
+      "    For GUROBI and CPLEX you can automatically perform this re-solve\n",
+      "    with the keyword argument prob.solve(reoptimize=True, ...).\n",
+      "    \n",
+      "  warnings.warn(INF_OR_UNB_MESSAGE)\n",
       "c:\\Users\\willi\\Documents\\Year 4 Project Work\\Proj_venv\\lib\\site-packages\\cvxpy\\reductions\\solvers\\solving_chain.py:336: FutureWarning: \n",
       "    Your problem is being solved with the ECOS solver by default. Starting in \n",
       "    CVXPY 1.5.0, Clarabel will be used as the default solver instead. To continue \n",
@@ -672,12 +694,26 @@
       "    \n",
       "  warnings.warn(ECOS_DEPRECATION_MSG, FutureWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "k_on in (0.0, None) , status: optimal , infeasible_or_unbounded\n",
+      "\n",
+      "k_off in (0.0, None) , status: optimal , infeasible_or_unbounded\n",
+      "\n",
+      "k_tx in (1.8208691217999418, inf) , status: optimal , unbounded\n",
+      "\n",
+      "k_deg = 1\n"
+     ]
     }
    ],
    "source": [
     "# solve LP\n",
-    "variables = [0.9, 0.1, \"v\", 1]\n",
-    "solution = gene_expression_LP_upscaling(variables, intervals, beta, x_max, x_max_0, sample_mean)"
+    "variables = [\"v\", \"v\", \"v\", 1]\n",
+    "solution = gene_expression_LP_upscaling(variables, intervals, beta, x_max, x_max_0, sample_mean, frechet_bounds=True)"
    ]
   }
  ],
