Further frechet bounds can give upper and lower bounds

--- a/gene_upscaling.ipynb
+++ b/gene_upscaling.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,18 +513,30 @@
     "            B @ z_on[0::2] <= k_on * pu, B @ z_on[1::2] <= k_on * pu,\n",
     "            B @ z_off[0::2] <= k_off * pu, B @ z_off[1::2] <= k_off * pu,\n",
     "            B @ z_tx[0::2] <= k_tx * pu, B @ z_tx[1::2] <= k_tx * pu,\n",
-    "            B @ z_deg[0::2] <= k_deg * pu, B @ z_deg[1::2] <= k_deg * pu\n",
+    "            B @ z_deg[0::2] <= k_deg * pu, B @ z_deg[1::2] <= k_deg * pu,\n",
     "            # lower bounds\n",
-    "            # B @ z_on[0::2] + k_on * t_bound\n",
+    "            B @ z_on[0::2] + B @ z_off[0::2] + k_on * t_bound + k_off * t_bound >= k_on * pl + k_off * pl - k_on * B @ np.ones(x_max_0 + 1),\n",
+    "            B @ z_on[1::2] + B @ z_off[1::2] + k_on * t_bound + k_off * t_bound >= k_on * pl + k_off * pl - k_off * B @ np.ones(x_max_0 + 1)\n",
     "        ]\n",
     "\n",
     "    if frechet_bounds_further:\n",
     "        constraints += [\n",
     "            # further frechet bounds (need k_on and k_off fixed)\n",
-    "            z_tx >= (k_on * pdl + k_off * pdl - kv - k_off * pdu) * (k_tx / k_on),\n",
-    "            z_deg >= (k_on * pdl + k_off * pdl - kv - k_off * pdu) * (k_deg / k_on),\n",
-    "            z_tx >= (k_on * pdl + k_off * pdl - kv - k_on * pdu) * (k_tx / k_off),\n",
-    "            z_deg >= (k_on * pdl + k_off * pdl - kv - k_on * pdu) * (k_deg / k_off)\n",
+    "            # z_tx >= (k_on * pdl + k_off * pdl - kv - k_off * pdu) * (k_tx / k_on),\n",
+    "            # z_deg >= (k_on * pdl + k_off * pdl - kv - k_off * pdu) * (k_deg / k_on),\n",
+    "            # z_tx >= (k_on * pdl + k_off * pdl - kv - k_on * pdu) * (k_tx / k_off),\n",
+    "            # z_deg >= (k_on * pdl + k_off * pdl - kv - k_on * pdu) * (k_deg / k_off)\n",
+    "            B @ z_on[0::2] + k_on * t_bound >= k_on * pl - k_on * (k_on / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            B @ z_on[1::2] + k_on * t_bound >= k_on * pl - k_on * (k_off / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            \n",
+    "            B @ z_off[0::2] + k_off * t_bound >= k_off * pl - k_off * (k_on / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            B @ z_off[1::2] + k_off * t_bound >= k_off * pl - k_off * (k_off / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            \n",
+    "            B @ z_tx[0::2] + k_tx * t_bound >= k_tx * pl - k_tx * (k_on / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            B @ z_tx[1::2] + k_tx * t_bound >= k_tx * pl - k_tx * (k_off / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            \n",
+    "            B @ z_deg[0::2] + k_deg * t_bound >= k_deg * pl - k_deg * (k_on / (k_on + k_off)) * B @ np.ones(x_max_0 + 1),\n",
+    "            B @ z_deg[1::2] + k_deg * t_bound >= k_deg * pl - k_deg * (k_off / (k_on + k_off)) * B @ np.ones(x_max_0 + 1)\n",
     "        ]\n",
     "    \n",
     "    # solutions\n",
@@ -659,52 +671,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "# choice of truncation\n",
     "x_max = 8\n",
-    "x_max_0 = 100"
+    "x_max_0 = 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\willi\\Documents\\Year 4 Project Work\\Proj_venv\\lib\\site-packages\\cvxpy\\problems\\problem.py:1409: UserWarning: \n",
-      "    The problem is either infeasible or unbounded, but the solver\n",
-      "    cannot tell which. Disable any solver-specific presolve methods\n",
-      "    and re-solve to determine the precise problem status.\n",
-      "\n",
-      "    For GUROBI and CPLEX you can automatically perform this re-solve\n",
-      "    with the keyword argument prob.solve(reoptimize=True, ...).\n",
-      "    \n",
-      "  warnings.warn(INF_OR_UNB_MESSAGE)\n",
-      "c:\\Users\\willi\\Documents\\Year 4 Project Work\\Proj_venv\\lib\\site-packages\\cvxpy\\reductions\\solvers\\solving_chain.py:336: FutureWarning: \n",
-      "    Your problem is being solved with the ECOS solver by default. Starting in \n",
-      "    CVXPY 1.5.0, Clarabel will be used as the default solver instead. To continue \n",
-      "    using ECOS, specify the ECOS solver explicitly using the ``solver=cp.ECOS`` \n",
-      "    argument to the ``problem.solve`` method.\n",
-      "    \n",
-      "  warnings.warn(ECOS_DEPRECATION_MSG, FutureWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "k_on in (0.0, None) , status: optimal , infeasible_or_unbounded\n",
+      "k_on = 0.9\n",
       "\n",
-      "k_off in (0.0, None) , status: optimal , infeasible_or_unbounded\n",
+      "k_off = 0.1\n",
       "\n",
-      "k_tx in (1.8208691217999418, inf) , status: optimal , unbounded\n",
+      "k_tx in (1.8874800825249731, 3.5719935195517767) , status: optimal , optimal\n",
       "\n",
       "k_deg = 1\n"
      ]
@@ -712,8 +702,8 @@
    ],
    "source": [
     "# solve LP\n",
-    "variables = [\"v\", \"v\", \"v\", 1]\n",
-    "solution = gene_expression_LP_upscaling(variables, intervals, beta, x_max, x_max_0, sample_mean, frechet_bounds=True)"
+    "variables = [0.9, 0.1, \"v\", 1]\n",
+    "solution = gene_expression_LP_upscaling(variables, intervals, beta, x_max, x_max_0, sample_mean, frechet_bounds=True, frechet_bounds_further=True)"
    ]
   }
  ],
